--- a/docker/x86/main-x86/Dockerfile
+++ b/docker/x86/main-x86/Dockerfile
@@ -26,4 +26,4 @@ RUN chmod +x ./prepare_ws.sh ./entrypoint.sh
 RUN pip3 install pycuda --verbose
 RUN pip install tensorrt
 RUN pip install plyfile
-RUN apt-get update && apt-get install ros-noetic-rqt-image-view
+RUN apt-get update && apt-get install -y ros-noetic-rqt-image-view
